US2848: bugfix: selectbox fontsize was too large

--- a/web/src/main/webapp/css/ie7.css
+++ b/web/src/main/webapp/css/ie7.css
@@ -78,5 +78,4 @@ table.left_tab_table td
 	width: 210px;
 	margin-top: 2px;
 	line-height: 22px;
-	font-size: 22px;
 }
